--- a/doramas.html
+++ b/doramas.html
@@ -9,9 +9,9 @@
             <div class="content">
                 <div class="titulo"><a href="index.html" class="link"><h1 >BLOG DE TEKE</h1></a></div>
                 <div class="caja">
-                    <a href="terror.html"><img src="supernatural.jpg" class="imagen"></a>
-                    <a href="comedia.html"><img src="francoescamilla.jpg" class="imagen"></a>
-                    <a href="doramas.html"><img src="goblin.jpg" class="imagen"></a>
+                    <a href="terror.html"><img src="imagenes/supernatural.jpg" class="imagen"></a>
+                    <a href="comedia.html"><img src="imagenes/francoescamilla.jpg" class="imagen"></a>
+                    <a href="doramas.html"><img src="imagenes/goblin.jpg" class="imagen"></a>
                 </div>
                 <div><h2 class="subtitulo">DORAMAS</h2></div>
                 <p class="parrafo">Sólo empezé a ver estas series hace exactamente 2 años gracias a una amiga que me insitía y recontra insistía hasta que por fin le hice caso y realmentele agradezco porque ME ENCANTAN! amoo todos y cada uno de ellos, pero les contaré sobre los que más me gustaron (OJO: no porque esté alguno antes que otro significa que es mejor, aún no me decido cuál es mi favorito porque todos los disfruté en el momento que los ví</p>
