agregue carpeta estilos

--- a/comedia.html
+++ b/comedia.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>Daira blog</title>
-        <link rel="stylesheet" type="text/css" href="daira.css">
+        <link rel="stylesheet" type="text/css" href="styles/daira.css">
     </head>
     <body bgcolor="#91D8D6">
         <div class="general">
