las imagenes de arriba

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
             <div class="content">
                 <div class="titulo"><h1 >BLOG DE TEKE</h1></div>
                 <div class="caja">
-                    <img src="imagenes/supernatural.jpg" class="imagen">
-                    <img src="imagenes/francoescamilla.jpg" class="imagen">
-                    <img src="imagenes/goblin.jpg" class="imagen">
+                    <img src="supernatural.jpg" class="imagen">
+                    <img src="francoescamilla.jpg" class="imagen">
+                    <img src="goblin.jpg" class="imagen">
                 </div>
                     <div class="caja2">
                         <h2><a href="terror.html">Terror</a></h2>
