--- a/terror.html
+++ b/terror.html
@@ -9,9 +9,9 @@
             <div class="content">
                 <div class="titulo"><a href="index.html" class="link"><h1 >BLOG DE TEKE</h1></a></div>
                 <div class="caja">
-                    <a href="terror.html"><img src="imagenes/supernatural.jpg" class="imagen"></a>
-                    <a href="comedia.html"><img src="imagenes/francoescamilla.jpg" class="imagen"></a>
-                    <a href="doramas.html"><img src="imagenes/goblin.jpg" class="imagen"></a>
+                    <a href="terror.html"><img src="supernatural.jpg" class="imagen"></a>
+                    <a href="comedia.html"><img src="francoescamilla.jpg" class="imagen"></a>
+                    <a href="doramas.html"><img src="goblin.jpg" class="imagen"></a>
                 </div>
                 <div><h2 class="subtitulo">TERROR</h2></div>
                 <div>
