--- a/terror.html
+++ b/terror.html
@@ -2,6 +2,7 @@
     <head>
         <title>Daira blog</title>
         <link rel="stylesheet" type="text/css" href="styles/daira.css">
+        <meta charset="UTF-8"/>
     </head>
     <body bgcolor="#91D8D6">
         <div class="general">
